Styling updates on profile page, css fix to migrate start to flex-start

--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -110,7 +110,7 @@
       right: .5rem;
 
       .icon {
-        align-items: start;
+        align-items: flex-start;
         display: flex;
         justify-content: flex-start;
 
