--- a/styles/logobar.scss
+++ b/styles/logobar.scss
@@ -22,7 +22,7 @@
     }
 
     .logo-text {
-      align-items: start;
+      align-items: flex-start;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
