--- a/styles/styles.css
+++ b/styles/styles.css
@@ -776,7 +776,7 @@ p .index-inspire-change-text {
 .logo-bar-left-content .logo-content .logo-text,
 .logo-bar-right-content .logo-content .logo-text,
 .logo-content .logo-content .logo-text {
-  align-items: start;
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -1028,7 +1028,7 @@ p .index-inspire-change-text {
     right: 0.5rem;
   }
   .nav-bar .nav-toggle .icon {
-    align-items: start;
+    align-items: flex-start;
     display: flex;
     justify-content: flex-start;
   }
@@ -1791,7 +1791,7 @@ p .index-inspire-change-text {
 .logo-bar-left-content .logo-content .logo-text,
 .logo-bar-right-content .logo-content .logo-text,
 .logo-content .logo-content .logo-text {
-  align-items: start;
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -2043,7 +2043,7 @@ p .index-inspire-change-text {
     right: 0.5rem;
   }
   .nav-bar .nav-toggle .icon {
-    align-items: start;
+    align-items: flex-start;
     display: flex;
     justify-content: flex-start;
   }
@@ -2092,86 +2092,83 @@ p .index-inspire-change-text {
   }
 }
 .profile-content {
-  display: grid;
-  gap: 20px;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
 }
 
 .profile-page-picture {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr 0.1fr;
+  margin-left: auto;
+  margin-right: 0.5rem;
 }
 .profile-page-picture img {
   border: 2px solid #015e41;
   border-radius: 50%;
+  grid-column: 4;
+  grid-row: 1;
   height: 150px;
+  justify-self: center;
   object-fit: cover;
   width: 150px;
 }
 
 .edit-profile-button {
-  cursor: not-allowed;
-  margin-top: 0.5rem;
-  position: relative;
+  align-self: flex-start;
+  font-size: 1rem;
+  grid-column: 4;
+  grid-row: 2;
+  justify-self: center;
+  width: auto;
 }
 .edit-profile-button::before {
-  background-color: #015e41;
-  border-radius: 4px;
-  color: #fff;
-  content: attr(data-tooltip);
-  font-size: 12px;
-  left: 50%;
-  opacity: 0;
-  padding: 8px 15px;
-  pointer-events: none;
-  position: absolute;
-  top: 20px;
-  transform: translateX(-50%);
-  visibility: hidden;
-  white-space: nowrap;
-}
-.edit-profile-button:hover::before {
-  opacity: 1;
-  visibility: visible;
+  white-space: normal;
 }
 
 .profile-info {
-  display: flex;
-  flex-direction: column;
-  grid-column: 1/2;
+  display: grid;
+  grid-template-columns: 0.5fr 2fr;
   padding-left: 0.5rem;
 }
 
 .profile-item {
   color: #aaa;
+  font-size: 0.75rem;
   font-weight: bold;
-}
-.profile-item:not(:first-child) {
   padding-top: 1rem;
 }
 
 .profile-value {
-  padding-left: 0.5rem;
+  font-size: 1rem;
+  justify-content: flex-start;
+  padding-left: 1rem;
+  padding-top: 1rem;
 }
 
 @media (max-width: 76.5rem) {
   .profile-page-picture {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr 0.1fr;
+    margin-left: auto;
+    margin-right: 0.5rem;
   }
   .profile-page-picture img {
     border: 2px solid #015e41;
     border-radius: 50%;
-    height: 100px;
+    grid-column: 4;
+    grid-row: 1;
+    height: 60px;
+    justify-self: center;
     object-fit: cover;
-    width: 100px;
+    width: 60px;
   }
   .edit-profile-button {
+    align-self: flex-start;
     font-size: 1rem;
+    grid-column: 4;
+    grid-row: 2;
+    justify-self: center;
     width: auto;
   }
   .edit-profile-button::before {
@@ -2361,7 +2358,7 @@ p .index-inspire-change-text {
   margin-bottom: 10px;
 }
 .comment img {
-  align-self: start;
+  align-self: flex-start;
   border-radius: 50%;
   grid-row: span 2;
   height: 30px;
@@ -2446,7 +2443,7 @@ p .index-inspire-change-text {
 
 .profile-image {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
 }
 .profile-image img {
   border-radius: 50%;
@@ -2566,7 +2563,7 @@ p .index-inspire-change-text {
     align-items: center;
     display: flex;
     font-size: 0.75rem;
-    justify-content: start;
+    justify-content: flex-start;
   }
   .post-location a {
     font-size: 0.75rem;
@@ -2619,7 +2616,7 @@ p .index-inspire-change-text {
     align-items: center;
     display: flex;
     font-size: 0.75rem;
-    justify-content: start;
+    justify-content: flex-start;
   }
   .post-location a {
     font-size: 0.75rem;
@@ -2716,8 +2713,8 @@ p .index-inspire-change-text {
 .table td,
 .table th {
   border: 0.06rem solid #ddd;
-  max-width: 150px;
-  padding: 1rem;
+  max-width: 125px;
+  text-align: center;
   word-wrap: break-word;
 }
 
@@ -2824,8 +2821,8 @@ p .index-inspire-change-text {
 
 .event-form {
   display: grid;
-  gap: 10px;
-  grid-template-rows: repeat(1, 1fr);
+  gap: 8px;
+  grid-template-rows: 1fr;
 }
 
 .form-row {
@@ -2950,86 +2947,83 @@ textarea.event-description-input {
 }
 
 .profile-content {
-  display: grid;
-  gap: 20px;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
 }
 
 .profile-page-picture {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr 0.1fr;
+  margin-left: auto;
+  margin-right: 0.5rem;
 }
 .profile-page-picture img {
   border: 2px solid #015e41;
   border-radius: 50%;
+  grid-column: 4;
+  grid-row: 1;
   height: 150px;
+  justify-self: center;
   object-fit: cover;
   width: 150px;
 }
 
 .edit-profile-button {
-  cursor: not-allowed;
-  margin-top: 0.5rem;
-  position: relative;
+  align-self: flex-start;
+  font-size: 1rem;
+  grid-column: 4;
+  grid-row: 2;
+  justify-self: center;
+  width: auto;
 }
 .edit-profile-button::before {
-  background-color: #015e41;
-  border-radius: 4px;
-  color: #fff;
-  content: attr(data-tooltip);
-  font-size: 12px;
-  left: 50%;
-  opacity: 0;
-  padding: 8px 15px;
-  pointer-events: none;
-  position: absolute;
-  top: 20px;
-  transform: translateX(-50%);
-  visibility: hidden;
-  white-space: nowrap;
-}
-.edit-profile-button:hover::before {
-  opacity: 1;
-  visibility: visible;
+  white-space: normal;
 }
 
 .profile-info {
-  display: flex;
-  flex-direction: column;
-  grid-column: 1/2;
+  display: grid;
+  grid-template-columns: 0.5fr 2fr;
   padding-left: 0.5rem;
 }
 
 .profile-item {
   color: #aaa;
+  font-size: 0.75rem;
   font-weight: bold;
-}
-.profile-item:not(:first-child) {
   padding-top: 1rem;
 }
 
 .profile-value {
-  padding-left: 0.5rem;
+  font-size: 1rem;
+  justify-content: flex-start;
+  padding-left: 1rem;
+  padding-top: 1rem;
 }
 
 @media (max-width: 76.5rem) {
   .profile-page-picture {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr 0.1fr;
+    margin-left: auto;
+    margin-right: 0.5rem;
   }
   .profile-page-picture img {
     border: 2px solid #015e41;
     border-radius: 50%;
-    height: 100px;
+    grid-column: 4;
+    grid-row: 1;
+    height: 60px;
+    justify-self: center;
     object-fit: cover;
-    width: 100px;
+    width: 60px;
   }
   .edit-profile-button {
+    align-self: flex-start;
     font-size: 1rem;
+    grid-column: 4;
+    grid-row: 2;
+    justify-self: center;
     width: auto;
   }
   .edit-profile-button::before {
@@ -3219,7 +3213,7 @@ textarea.event-description-input {
   margin-bottom: 10px;
 }
 .comment img {
-  align-self: start;
+  align-self: flex-start;
   border-radius: 50%;
   grid-row: span 2;
   height: 30px;
@@ -3304,7 +3298,7 @@ textarea.event-description-input {
 
 .profile-image {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
 }
 .profile-image img {
   border-radius: 50%;
@@ -3424,7 +3418,7 @@ textarea.event-description-input {
     align-items: center;
     display: flex;
     font-size: 0.75rem;
-    justify-content: start;
+    justify-content: flex-start;
   }
   .post-location a {
     font-size: 0.75rem;
@@ -3477,7 +3471,7 @@ textarea.event-description-input {
     align-items: center;
     display: flex;
     font-size: 0.75rem;
-    justify-content: start;
+    justify-content: flex-start;
   }
   .post-location a {
     font-size: 0.75rem;
@@ -3574,8 +3568,8 @@ textarea.event-description-input {
 .table td,
 .table th {
   border: 0.06rem solid #ddd;
-  max-width: 150px;
-  padding: 1rem;
+  max-width: 125px;
+  text-align: center;
   word-wrap: break-word;
 }
 
@@ -3682,8 +3676,8 @@ textarea.event-description-input {
 
 .event-form {
   display: grid;
-  gap: 10px;
-  grid-template-rows: repeat(1, 1fr);
+  gap: 8px;
+  grid-template-rows: 1fr;
 }
 
 .form-row {
