--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2836,6 +2836,71 @@ p .index-inspire-change-text {
   text-align: end;
 }
 
+.rsvp-details-table {
+  border-collapse: collapse;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  margin-top: 1rem;
+  width: 100%;
+}
+.rsvp-details-table th,
+.rsvp-details-table td {
+  border: 1px solid #e5e5e4;
+  padding: 8px 12px;
+  text-align: left;
+}
+.rsvp-details-table th {
+  background-color: #e5e5e4;
+  color: #000;
+}
+.rsvp-details-table tr:hover {
+  background-color: #e5e5e4;
+}
+.rsvp-details-table button {
+  background-color: #4267b2;
+  border: 0;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  margin-top: 20px;
+  padding: 10px 15px;
+  transition: background-color 0.2s;
+}
+.rsvp-details-table button:hover {
+  background-color: #4267b2;
+}
+.rsvp-details-table tbody tr:nth-child(odd) {
+  background-color: #fff;
+}
+.rsvp-details-table tbody tr:nth-child(even) {
+  background-color: #e5e5e4;
+}
+.rsvp-details-table tbody tr:hover {
+  background-color: #e5e5e4;
+}
+
+.download-csv-button {
+  background-color: #015e41;
+  border: 0;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
+  margin-left: 0.5rem;
+  margin-top: 2rem;
+  padding: 10px 20px;
+  transition: background-color 0.3s ease-in-out;
+}
+.download-csv-button:hover {
+  background-color: #4267b2;
+}
+.download-csv-button:active {
+  background-color: #4267b2;
+}
+.download-csv-button:focus {
+  outline: none;
+}
+
 textarea.event-description-input {
   min-height: 100px;
   overflow-wrap: break-word;
@@ -2918,6 +2983,28 @@ textarea.event-description-input {
   }
   .cancel-rsvp-button {
     font-size: 0.5rem;
+  }
+  .rsvp-details-table {
+    border-collapse: collapse;
+    max-width: 100%;
+    min-width: 100%;
+    margin-left: 0.5rem;
+    margin-top: 0;
+    width: 50%;
+  }
+  .rsvp-details-table th,
+  .rsvp-details-table td {
+    border: 1px solid #e5e5e4;
+    font-size: 0.7rem;
+    padding: 5px 5px;
+    text-align: left;
+  }
+  .rsvp-details-table th {
+    background-color: #e5e5e4;
+    color: #000;
+  }
+  .rsvp-details-table tr:hover {
+    background-color: #e5e5e4;
   }
 }
 @media (max-width: 102.25rem) and (orientation: landscape) {
@@ -3691,6 +3778,71 @@ textarea.event-description-input {
   text-align: end;
 }
 
+.rsvp-details-table {
+  border-collapse: collapse;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  margin-top: 1rem;
+  width: 100%;
+}
+.rsvp-details-table th,
+.rsvp-details-table td {
+  border: 1px solid #e5e5e4;
+  padding: 8px 12px;
+  text-align: left;
+}
+.rsvp-details-table th {
+  background-color: #e5e5e4;
+  color: #000;
+}
+.rsvp-details-table tr:hover {
+  background-color: #e5e5e4;
+}
+.rsvp-details-table button {
+  background-color: #4267b2;
+  border: 0;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  margin-top: 20px;
+  padding: 10px 15px;
+  transition: background-color 0.2s;
+}
+.rsvp-details-table button:hover {
+  background-color: #4267b2;
+}
+.rsvp-details-table tbody tr:nth-child(odd) {
+  background-color: #fff;
+}
+.rsvp-details-table tbody tr:nth-child(even) {
+  background-color: #e5e5e4;
+}
+.rsvp-details-table tbody tr:hover {
+  background-color: #e5e5e4;
+}
+
+.download-csv-button {
+  background-color: #015e41;
+  border: 0;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
+  margin-left: 0.5rem;
+  margin-top: 2rem;
+  padding: 10px 20px;
+  transition: background-color 0.3s ease-in-out;
+}
+.download-csv-button:hover {
+  background-color: #4267b2;
+}
+.download-csv-button:active {
+  background-color: #4267b2;
+}
+.download-csv-button:focus {
+  outline: none;
+}
+
 textarea.event-description-input {
   min-height: 100px;
   overflow-wrap: break-word;
@@ -3774,6 +3926,28 @@ textarea.event-description-input {
   .cancel-rsvp-button {
     font-size: 0.5rem;
   }
+  .rsvp-details-table {
+    border-collapse: collapse;
+    max-width: 100%;
+    min-width: 100%;
+    margin-left: 0.5rem;
+    margin-top: 0;
+    width: 50%;
+  }
+  .rsvp-details-table th,
+  .rsvp-details-table td {
+    border: 1px solid #e5e5e4;
+    font-size: 0.7rem;
+    padding: 5px 5px;
+    text-align: left;
+  }
+  .rsvp-details-table th {
+    background-color: #e5e5e4;
+    color: #000;
+  }
+  .rsvp-details-table tr:hover {
+    background-color: #e5e5e4;
+  }
 }
 @media (max-width: 102.25rem) and (orientation: landscape) {
   .start-time-column {
@@ -3808,7 +3982,7 @@ body {
 }
 
 main {
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 h1 {
