--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -105,10 +105,11 @@ textarea {
 }
 
 .page {
-  align-items: center;
+  align-items: flex-start;
   background-color: $gray;
   display: flex;
   justify-content: center;
+  min-height: 100vh;
   padding: 1.5rem;
 }
 
