--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -121,10 +121,6 @@ textarea {
   min-height: 35vh;
   padding: 1.5rem;
   width: 70%;
-
-  //ul {
-  //  padding: 3rem;
-  //}
 }
 
 // Media Query for Mobile Devices
@@ -136,7 +132,7 @@ textarea {
   }
 
   .page {
-    align-items: center;
+    align-items: flex-start;
     display: flex;
     justify-content: center;
     padding: .6rem 0 0;
